force-app/main/default/objects/Budget_Month__c/Budget_Month__c.object-meta.xml
<CustomObject>
    <label>חודש לתקציב</label>
    <nameField>
        <label>חודש לתקציב</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>חודשים לתקציב</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>