force-app/main/default/objects/Budget_Month__c/fields/Budget_Year__c.field-meta.xml
<CustomField>
    <fullName>Budget_Year__c</fullName>
    <label>שנת תקציב</label>
    <referenceTo>Budget_Year__c</referenceTo>
    <relationshipLabel>חודשים לתקציב</relationshipLabel>
    <relationshipName>Budget_Month</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>