force-app/main/default/objects/Budget_Month__c/fields/Month__c.field-meta.xml
<CustomField>
    <fullName>Month__c</fullName>
    <label>חודש</label>
    <type>Date</type>
</CustomField>