force-app/main/default/objects/Budget_Month__c/fields/PI__c.field-meta.xml
<CustomField>
    <fullName>PI__c</fullName>
    <label>אחריות מקצועית</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>